server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prospectly-backend
  namespace: default
  labels:
    app: prospectly-backend
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: prospectly-backend
