server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prospectly-backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: learning-back.officebrain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prospectly-backend
                port:
                  number: 5000
